--- a/pr4/pr4.html
+++ b/pr4/pr4.html
@@ -51,11 +51,11 @@
         <div class="item">Cheese<span class="qty"> x 1</span></div>
         <div class="item">Chocolate bar<span class="qty"> x 3</span></div>
     </div>
-    <button class="btn" onclick="Remove()">Ответ</button>
+    <button class="btn" onclick="Remove()">Нажмите меня</button><br><hr>
     <!-- ============================================ -->
     Задание 6 <br>
     <div class="br">
-        <button class="btn" onclick="addinfo()">Ответ</button>
+        <button class="btn" onclick="addinfo()">Нажмите меня</button>
     </div>
     <script src="./js/pr4.js">
     </script>
