--- a/pr4/pr4.html
+++ b/pr4/pr4.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="./css/pr4.css">
 </head>
 
-<body onclick="sort()">
+<body>
+
     <canvas id="myDrawing" width="200" height="200"></canvas>
     <button onclick="sort()">Сортировать</button>
-    <div id="strings" style="margin-bottom: 50px">
+    <div onclick="sort()" id="strings" style="margin-bottom: 50px">
         <div id="string-1">Ядра в вёдра, выдру в тундру!</div>
         <div id="string-2">Выдрав с выдры в тундре гетры</div>
         <div id="string-3">В недрах тундры, выдры в гетрах </div>
