--- a/pr4/pr4.html
+++ b/pr4/pr4.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-
+	Задача 9 - Нарисовать смайлик<br>
     <canvas id="myDrawing" width="200" height="200"></canvas>
+    <hr><br>
+	Задача 10 - Скороговорка<br>
     <button onclick="sort()">Сортировать</button>
     <div onclick="sort()" id="strings" style="margin-bottom: 50px">
         <div id="string-1">Ядра в вёдра, выдру в тундру!</div>
@@ -21,7 +23,8 @@
         <div id="string-5">Тырят в вёдра ядра кедров!</div>
         <div id="string-6">Вытру выдрой ядра кедров</div>
     </div>
-    <!-- Задание №2 -->
+    <hr><br>
+    Задача 11 - Задать красный цвет<br>
     <div style="margin-bottom: 50px">
         <div id="element1">Element 1</div>
         <div id="element2">Element 2</div>
@@ -30,10 +33,12 @@
         <div id="element5">Element 5</div>
         <div id="element6">Element 6</div>
     </div>
-    <!-- Задание №3 -->
+    <hr><br>
+    Задача 12 - Добавить пять задач<br>
     <ol id="ol">
     </ol>
-    <!-- Задание №4 -->
+    <hr><br>
+    Задача 13 - Визуальное отделение абзацев<br>
     <article>
         <h3>What is Lorem Ipsum?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release sheets containing Lorem Ipsum passages.</p>
@@ -42,9 +47,8 @@
         <h3>Why do we use it?</h3>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
     </article>
-    <!-- Задание №5 -->
-    Задание 5
-    Дана такая разметка:
+    <hr><br>
+    Задача 14 - Заменить товар<br>
     <div id="cartitems">
         <div class="item">Milk 1 l.<span class="qty"> x 2</span></div>
         <div class="item">Cola 1.5 l. <span class="qty"> x 1</span></div>
@@ -53,8 +57,8 @@
         <div class="item">Chocolate bar<span class="qty"> x 3</span></div>
     </div>
     <button class="btn" onclick="Remove()">Нажмите меня</button><br><hr>
-    <!-- ============================================ -->
-    Задание 6 <br>
+    <hr><br>
+    Задача 15 - Ввод задач пользователем<br>
     <div class="br">
         <button class="btn" onclick="addinfo()">Нажмите меня</button>
     </div>
