--- a/pr4/pr4.html
+++ b/pr4/pr4.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-	Задача 9 - Нарисовать смайлик<br>
+	<h4>Задача 9</h4> - Нарисовать смайлик<br>
     <canvas id="myDrawing" width="200" height="200"></canvas>
     <hr><br>
-	Задача 10 - Скороговорка<br>
+	<h4>Задача 10</h4> - Скороговорка<br>
     <button onclick="sort()">Сортировать</button>
     <div onclick="sort()" id="strings" style="margin-bottom: 50px">
         <div id="string-1">Ядра в вёдра, выдру в тундру!</div>
@@ -24,7 +24,7 @@
         <div id="string-6">Вытру выдрой ядра кедров</div>
     </div>
     <hr><br>
-    Задача 11 - Задать красный цвет<br>
+    <h4>Задача 11</h4> - Задать красный цвет<br>
     <div style="margin-bottom: 50px">
         <div id="element1">Element 1</div>
         <div id="element2">Element 2</div>
@@ -34,11 +34,11 @@
         <div id="element6">Element 6</div>
     </div>
     <hr><br>
-    Задача 12 - Добавить пять задач<br>
+    <h4>Задача 12</h4> - Добавить пять задач<br>
     <ol id="ol">
     </ol>
     <hr><br>
-    Задача 13 - Визуальное отделение абзацев<br>
+    <h4>Задача 13</h4> - Визуальное отделение абзацев<br>
     <article>
         <h3>What is Lorem Ipsum?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release sheets containing Lorem Ipsum passages.</p>
@@ -48,7 +48,7 @@
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
     </article>
     <hr><br>
-    Задача 14 - Заменить товар<br>
+    <h4>Задача 14</h4> - Заменить товар<br>
     <div id="cartitems">
         <div class="item">Milk 1 l.<span class="qty"> x 2</span></div>
         <div class="item">Cola 1.5 l. <span class="qty"> x 1</span></div>
@@ -58,7 +58,7 @@
     </div>
     <button class="btn" onclick="Remove()">Нажмите меня</button><br><hr>
     <hr><br>
-    Задача 15 - Ввод задач пользователем<br>
+    <h4>Задача 15</h4> - Ввод задач пользователем<br>
     <div class="br">
         <button class="btn" onclick="addinfo()">Нажмите меня</button>
     </div>
