--- a/pr6/pr6.html
+++ b/pr6/pr6.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<!-- <div class="results"></div> -->
     <script src="js/pr6.js"></script>
     <!-- <img src="https://giphy.com/gifs/bad-6BZaFXBVPBtok" alt=""> -->
 </body>
