--- a/pr6/pr6.html
+++ b/pr6/pr6.html
@@ -10,6 +10,7 @@
 
 <body>
 	<!-- <div class="results"></div> -->
+	<!-- <img class = "resultimg" src="https://media.giphy.com/media/6BZaFXBVPBtok/giphy.gif" alt=""> -->
     <script src="js/pr6.js"></script>
     <!-- <img src="https://giphy.com/gifs/bad-6BZaFXBVPBtok" alt=""> -->
 </body>
