--- a/lastone/perehodnik.html
+++ b/lastone/perehodnik.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./news.css">
+    <link rel="stylesheet" href="./perehodnik.css">
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./media.css">
 
@@ -41,12 +41,12 @@
 
 
     <div class="body all_center">
-        РАЗДЕЛ ДЛЯ СОТРУДНИКОВ
+        ПРОВЕРКА ПОДЛИННОСТИ СОТРУДНИКОВ
+        <div>
+            
+        </div>
     </div>
 
- 
-
-    
     <script src="index.js"></script>
 </body>
 </html>
