--- a/lastone/index.html
+++ b/lastone/index.html
@@ -14,7 +14,7 @@
 
         <div class="header__logobox all_center">
             <a href="index.html" class="logoWord all_center">
-                IT-git
+                Street lamp
             </a>
         </div>
 
@@ -24,9 +24,9 @@
 
         <div id="menuDropdown" class="header__navBar all_center">
             <a href="index.html" class="navlink" style="color: rgb(70, 163, 226);">ГЛАВНАЯ</a> |
-            <a href="news.html" class="navlink">НОВОСТИ</a> |
             <a href="#whatWeDo" onclick="changeTab(event, 'whatWeDo')" class="navlink">УСЛУГИ</a> |
-            <a href="#whoWeAre" onclick="changeTab(event, 'whoWeAre')" class="navlink">КОМАНДА</a>
+            <a href="#whoWeAre" onclick="changeTab(event, 'whoWeAre')" class="navlink">КОМАНДА</a> | 
+            <a href="perehodnik.html" class="navlink">СОТРУДНИКИ</a>
         </div>
         
         <div class="header__dropdownBox all_center">
@@ -177,14 +177,14 @@
         <div class="footer__navbar all_center">
             <div class="footer__navBar all_center">
                 <a href="index.html" class="navlink" style="color: rgb(70, 163, 226);">ГЛАВНАЯ</a> |
-                <a href="news.html" class="navlink">НОВОСТИ</a> |
                 <a href="#whatWeDo" onclick="changeTab(event, 'whatWeDo')" class="navlink">УСЛУГИ</a> |
-                <a href="#whoWeAre" onclick="changeTab(event, 'whoWeAre')" class="navlink">КОМАНДА</a>
+                <a href="#whoWeAre" onclick="changeTab(event, 'whoWeAre')" class="navlink">КОМАНДА</a> |
+                <a href="perehodnik.html" class="navlink">СОТРУДНИКАМ</a>
             </div>
         </div>
         <div class="all_center" style="width: 100%; justify-content: space-between !important;">
             <div class="footer__logoBox">
-                <h4>© IT-git systems, Inc. All Rights Reserved</h4>
+                <h4>© Street <t> lamp </t> systems, Inc. All Rights Reserved</h4>
             </div>
             <div class="countryBox all_center">
                 <h4>Бишкек, Кыргызстан</h4>
